# gitme-ai

./: README.md  pyproject.toml
gitme/: cli.py  config.py  prompt.py
gitme/providers/: ollama.py  openrouter.py
tests/: test_diff.py  test_prompt.py
