[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "gitme-ai"
version = "0.1.2"
description = "AI-powered git commit message generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Rohit Balaji", email = "rohitvb26@gmail.com" }
]
keywords = ["git", "cli", "ai", "commit", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyperclip>=1.8",
    "requests>=2.28",
    "tomli-w>=1.0",
]
[project.scripts]
gitme = "gitme.cli:main"
gitme-config = "gitme.cli:config"

[tool.hatch.build.targets.wheel]
packages = ["gitme"]
[project.urls]
Homepage = "https://github.com/RohitB2005/gitme-ai"
Repository = "https://github.com/RohitB2005/gitme-ai"
"Bug Tracker" = "https://github.com/RohitB2005/gitme-ai/issues"